<resources>
    <string name="app_name">Github User\'s</string>
    <string name="username">Users Name</string>
    <string name="detail_repo">0 Repositories</string>
    <string name="search_user_hint">Search users</string>
    <string name="list_followers">Followers:</string>
    <string name="list_repositories">Repositories:</string>
    <string name="welcome">Welcome to Github User\'s</string>
    <string name="cant_connect">Can\'t connect, please try again later.</string>
    <string name="cant_find_user">Sorry, but we couldn\'t find a user with that username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_name">Name</string>
    <string name="dont_following_anyone">This user doesn\'t following anyone.</string>
    <string name="dont_have_followers">This user doesn\'t have followers.</string>

    <string name="detail_user_toolbar_string">Detail User</string>
    <string name="change_language_settings">Change language settings</string>
    <string name="github_home_page">Go to Github homepage</string>

    <string name="profile_photo_content_description">Profile photo</string>
    <string name="dot_between_alias_and_repo">Dot between alias and repo</string>

    <string name="added_to_favorit">Added to favorit</string>
    <string name="remove_from_favorit">Remove from favorit</string>
    <string name="label_there_is_no_favorit_data">There is no favorit data</string>

    <string name="repeating_reminder">Repeating Reminder Alarm has set</string>
    <string name="onetime_reminder">Reminder Alarm has set</string>
    <string name="label_reminder">Reminder</string>
    <string name="alarm_reminder_for">Set alarm for reminder</string>
    <string name="label_waktu_reminder">00:00</string>
    <string name="set_alarm_time">Set alarm time</string>
    <string name="set_alarm_active">Set alarm active</string>
    <string name="favorit_user">Favorit User\'s</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_msg">Time for Github User\'s App</string>
    <string name="alarm_disable_msg">Reminder turned off</string>
    <string name="alarm_enable_msg">Reminder turned on</string>
    <string name="turn_on_alarm">Turn on alarm</string>
    <string name="turn_off_alarm">Turn off alarm</string>

    <string name="alarm_set">Reminder time set</string>
    <string name="please_wait">Please wait…</string>

</resources>
