<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.reminder.ReminderActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/alarm_reminder_for"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/time_reminder"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_waktu_reminder"
        android:textSize="100sp"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_set_time"
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_time_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm_time"
            android:layout_marginStart="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_alarm"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_status_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_alarm"
            android:layout_marginStart="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>