<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_users_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/profile_photo_content_description"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@id/img_users_photo"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintLeft_toRightOf="@id/img_users_photo"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_repo"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginBottom="3dp"
            card_view:layout_constraintLeft_toRightOf="@id/img_users_photo"
            card_view:layout_constraintTop_toBottomOf="@id/txt_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="22dp"
            android:text="@string/list_repositories"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_number_of_repos"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="5dp"
            card_view:layout_constraintLeft_toRightOf="@id/txt_repo"
            card_view:layout_constraintTop_toBottomOf="@id/txt_name"
            android:textColor="@color/darkoranges"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            card_view:layout_constraintLeft_toRightOf="@id/tv_number_of_repos"
            card_view:layout_constraintTop_toBottomOf="@id/txt_name"
            android:text="@string/list_followers"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_number_of_followers"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            card_view:layout_constraintLeft_toRightOf="@id/txt_followers"
            card_view:layout_constraintTop_toBottomOf="@id/txt_name"
            android:textColor="@color/darkoranges"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="0" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_star_border_30"
            tools:text="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>